drivers: usb: import xiaomi extcon usb drivers
from bsp-zorn-v-oss

Signed-off-by: lolipuru <banstellazz@gmail.com>

--- a/drivers/usb/repeater/Kconfig
+++ b/drivers/usb/repeater/Kconfig
@@ -22,4 +22,10 @@ config QTI_PMIC_EUSB2_REPEATER
 	  repeater for USB HS/FS/LS functionality where eUSB2 repeater is used.
 
 	  To compile this driver as a module, choose M here.
+
+config MI_NXP_EUSB2_REPEATER
+	tristate "enable nxp repeater"
+	help
+	  Say Y or M here support NXP REPEATER
+
 endmenu
