--- a/drivers/usb/dwc3/Kconfig
+++ b/drivers/usb/dwc3/Kconfig
@@ -1,5 +1,10 @@
 # SPDX-License-Identifier: GPL-2.0
 
+config MI_EXTCON_USB_GPIO
+	tristate "extcon usb gpio"
+	help
+	  Say Y or M here support EXTCON USB GPIO
+
 config USB_DWC3
 	tristate "DesignWare USB3 DRD Core Support"
 	depends on (USB || USB_GADGET) && HAS_DMA
@@ -177,4 +182,10 @@ config USB_DWC3_MSM
 	  USB3 IP.
 	  Driver supports host, device and dual-role modes of operation.
 	  Say 'Y' or 'M' if you have one such device.
+
+config EN_U1U2
+	tristate "EN U1U2 function"
+	help
+	  Support EN U1/U2, please say 'Y' or 'M' here.
+
 endif
