--- a/drivers/usb/repeater/Makefile
+++ b/drivers/usb/repeater/Makefile
@@ -4,3 +4,5 @@
 #
 obj-$(CONFIG_USB_REPEATER)		+= repeater.o
 obj-$(CONFIG_QTI_PMIC_EUSB2_REPEATER)	+= repeater-qti-pmic-eusb2.o
+obj-$(CONFIG_MI_NXP_EUSB2_REPEATER)	+= repeater-i2c-eusb2.o
+
