--- a/drivers/input/touchscreen/synaptics_tcm2/Makefile
+++ b/drivers/input/touchscreen/synaptics_tcm2/Makefile
@@ -4,21 +4,21 @@
 
 # Each configuration option enables a list of files.
 
-NAME=
-
 TCM_CORE=tcm/
-TCM_DRIVER_SRC=drivers/input/touchscreen/synaptics_tcm2/
+ccflags-y += -I$(srctree)/drivers/input/touchscreen/synaptics_tcm2/
+ccflags-y += -I$(srctree)/drivers/input/touchscreen/synaptics_tcm2/tcm/
 
-obj-y += syna_tcm2.o
-obj-y += syna_tcm2_testing.o
-obj-y += syna_tcm2_sysfs.o
-obj-y += syna_tcm2_platform_spi.o
-obj-y += $(TCM_CORE)synaptics_touchcom_func_reflash.o
-obj-y += $(TCM_CORE)synaptics_touchcom_func_romboot.o
-obj-y += $(TCM_CORE)synaptics_touchcom_func_base.o
-obj-y += $(TCM_CORE)synaptics_touchcom_func_touch.o
-obj-y += $(TCM_CORE)synaptics_touchcom_core_v2.o
-obj-y += $(TCM_CORE)synaptics_touchcom_core_v1.o
+synaptics_tcm2-y += syna_tcm2.o
+synaptics_tcm2-y += \
+					$(TCM_CORE)synaptics_touchcom_core_v1.o \
+					$(TCM_CORE)synaptics_touchcom_core_v2.o \
+ 					$(TCM_CORE)synaptics_touchcom_func_base.o \
+ 					$(TCM_CORE)synaptics_touchcom_func_touch.o \
+					$(TCM_CORE)synaptics_touchcom_func_reflash.o \
+					$(TCM_CORE)synaptics_touchcom_func_romboot.o
 
-ccflags-y += -I$(srctree)/$(TCM_DRIVER_SRC)
-ccflags-y += -I$(srctree)/$(TCM_DRIVER_SRC)$(TCM_CORE)
+# synaptics_tcm2-y += syna_tcm2_testing.o
+# synaptics_tcm2-y += syna_tcm2_sysfs.o
+# synaptics_tcm2-y += syna_tcm2_platform_spi.o
+
+obj-$(CONFIG_TOUCHSCREEN_SYNA_TCM2) += synaptics_tcm2.o
